--- a/app/src/main/res/layout/fragment_matches_next.xml
+++ b/app/src/main/res/layout/fragment_matches_next.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.matches.MatchesNextFragment">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/spinner_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_next" />
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccentDark">
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+</RelativeLayout>
