--- a/app/src/main/res/layout/fragment_matches_next.xml
+++ b/app/src/main/res/layout/fragment_matches_next.xml
@@ -18,6 +18,20 @@
             android:padding="16dp" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:drawableTop="@drawable/ic_empty"
+        android:text="@string/error_empty" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/spinner_container" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
