--- a/app/src/main/res/layout/fragment_matches_events.xml
+++ b/app/src/main/res/layout/fragment_matches_events.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.matches.MatchesNextFragment">
+    tools:context=".view.matches.MatchesEventsFragment">
 
     <LinearLayout
         android:id="@+id/spinner_container"
