--- a/app/src/main/res/layout/activity_teams_detail.xml
+++ b/app/src/main/res/layout/activity_teams_detail.xml
@@ -33,41 +33,44 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_marginBottom="8dp"
-                    android:scaleType="fitCenter"
                     android:contentDescription="@string/title_team_logo"
+                    android:scaleType="fitCenter"
                     android:src="@mipmap/ic_launcher_round" />
 
                 <TextView
-                    android:id="@+id/tv_team"
+                    android:id="@+id/tv_name"
                     style="@style/TextAppearance.AppCompat.Headline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:text="@string/title_team_name" />
+                    android:text="@string/title_team_name"
+                    android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/tv_team_formed_year"
+                    android:id="@+id/tv_year"
                     style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:text="@string/title_team_years" />
+                    android:text="@string/title_team_years"
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/tv_stadium"
                     style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:text="@string/title_stadium_name" />
+                    android:text="@string/title_stadium_name"
+                    android:textAlignment="center" />
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:gravity="top"
                 app:layout_collapseMode="parallax"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:title=" "
+                app:titleMarginTop="16dp" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
