--- a/app/src/main/res/layout/fragment_teams_overview.xml
+++ b/app/src/main/res/layout/fragment_teams_overview.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.teamsDetail.TeamsOverviewFragment">
 
     <TextView
+        android:id="@+id/tv_overview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_overview" />
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:padding="16dp" />
+</android.support.v4.widget.NestedScrollView>
