--- a/app/src/main/res/layout/fragment_favorites_matches.xml
+++ b/app/src/main/res/layout/fragment_favorites_matches.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.favorites.FavoritesMatchesFragment">
+    tools:context=".view.favorites.FavoritesTabsFragment">
 
     <TextView
         android:id="@+id/tv_empty"
